manifests_v2/k8sniff/k8sniff-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sniff
  namespace: decco
spec:
  type: LoadBalancer
  ports:
    - port: 443
      targetPort: 8443
      nodePort: 30443
      protocol: TCP
  selector:
    role: k8sniff
